# mowglinext

./: .gitmodules  CONTRIBUTING.md  README.md  universal-gnss-docs-entrypoints.patch  universal-gnss-runtime-only.patch
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ros2-ci.yml  ros2-docker.yml  sensors-gps.yml  sensors-lidar-coin-d6.yml
docs/: GNSS_INTEGRATION_AUDIT.md  UNIVERSAL_GNSS_SIDECAR_MIGRATION.md  install.sh  test_install.sh
firmware/stm32/ros_usbnode/include/: board.h  board.h.template  mowgli_protocol.h
gui/asserts/: board.h.template  mower_config.schema.json
gui/pkg/api/: api.go  calibration.go  calibration_status.go  drive_tuning.go  drive_tuning_command_test.go  drive_tuning_report_test.go  params_test.go  settings.go  settings_test.go
gui/pkg/foxglove/: client.go
gui/pkg/msgs/mowgli/: types_generated.go
gui/pkg/providers/: ros.go  transform.go  transform_test.go
gui/web/: package.json
gui/web/src/components/: FlashBoardComponent.tsx  GpsComponent.tsx  MowerActions.tsx  MowerStatus.tsx  utils.tsx
gui/web/src/constants/: mowerModels.ts
gui/web/src/hooks/: useDriveTuning.ts  useGnssStatus.ts  useSettingsManager.ts
gui/web/src/i18n/: index.ts
gui/web/src/pages/: DiagnosticsPage.tsx  MowgliNextPage.tsx  OnboardingPage.tsx  SchedulePage.tsx  SettingsPage.tsx
gui/web/src/utils/: containers.ts  gpsStatus.test.ts  gpsStatus.ts
install/: mowglinext.sh  test_mowglinext.sh
install/compose/: docker-compose.gps.yml  docker-compose.lidar-coin-d6.yml
install/config/mowgli/: mowgli_robot.yaml
install/lib/: checks.sh  compose.sh  config.sh  env.sh  gps.sh  motd.sh  state.sh  ublox_config.sh  udev.sh  unicore_config.sh
install/tests/: test_check_mode.sh  test_compose_validity.sh  test_env_output.sh  test_gps_matrix.sh  test_hardware_presets.sh  test_state_parsing.sh
install/tests/lib/: harness.sh
ros2/: Dockerfile  README.md
ros2/src/fusion_graph/config/: fusion_graph.yaml
ros2/src/fusion_graph/src/: fusion_graph_node.cpp  fusion_graph_node_setup_comms.cpp
ros2/src/fusion_graph/test/: test_loop_closure_robust.cpp
ros2/src/mowgli_behavior/: CMakeLists.txt
ros2/src/mowgli_behavior/src/: behavior_tree_node.cpp  calibration_nodes.cpp  coverage_nodes.cpp  navigation_nodes.cpp  register_nodes.cpp
ros2/src/mowgli_bringup/: CMakeLists.txt  package.xml
ros2/src/mowgli_localization/: CMakeLists.txt
sensors/: README.md
sensors/gps/: Dockerfile  start_gps.sh  universal_gnss_topic_bridge.py
sensors/lidar-coin-d6/: CMakeLists.txt  Dockerfile  INTEGRATION.md  package.xml
sensors/lidar-coin-d6/sdk/: node_lidar.cpp  node_lidar.h  timer.cpp
sensors/lidar-coin-d6/src/: node_lidar_ros.cpp
sensors/unicore/: configure_receiver.sh  start_gps.sh  test_configure_receiver.sh  test_start_gps.sh
tools/motor/: README.md
tools/motor/mowgli_tools/: drive_pid_math.py  drive_pid_tuner.py
tools/motor/test/: test_drive_pid_math.py
wiki/: Sensors.md
(+54 files in other folders)
