<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cspc_lidar</name>
  <version>0.0.0</version>
  <description>
    ROS2 driver for the CSPC/Guoke "COIN" dTOF lidar family. Used in
    MowgliNext for the WitMotion Coin-D6 -- confirmed via source comparison
    to share an identical wire protocol with the seller's Coin-D6 driver.
  </description>
  <maintainer email="noreply@example.com">mowglinext</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
